--- a/cardDistribution/package.json
+++ b/cardDistribution/package.json
@@ -6,7 +6,8 @@
     "start": "npm run build && node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
-    "lint": "eslint . --config eslint.config.mjs"
+    "test": "node_modules/.bin/vitest",
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +17,14 @@
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.14",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.26.0",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "globals": "^16.1.0",
+    "knex": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
@@ -30,6 +35,9 @@
     "better-sqlite3": "^11.9.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "uuid": "^11.1.0"
+    "supertest": "^7.1.1",
+    "uuid": "^11.1.0",
+    "vitest": "^3.1.4",
+    "zod": "^3.25.20"
   }
 }
